--- a/src/main/resources/Ajouter.fxml
+++ b/src/main/resources/Ajouter.fxml
@@ -11,5 +11,6 @@
       <TextField fx:id="descriptionTF" layoutX="29.0" layoutY="92.0" promptText="description" />
       <TextField fx:id="musclecibleTF" layoutX="29.0" layoutY="139.0" promptText="muscle ciblé" />
       <Button layoutX="117.0" layoutY="188.0" mnemonicParsing="false" onAction="#ajouter" text="ajouter" />
+      <Button layoutX="319.0" layoutY="80.0" mnemonicParsing="false" onAction="#navigate" text="Button" />
    </children>
 </AnchorPane>
