--- a/src/main/resources/AfficherEx.fxml
+++ b/src/main/resources/AfficherEx.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherEx">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.AfficherEx">
    <children>
       <TableView fx:id="tableView" layoutX="200.0" layoutY="61.0" prefHeight="201.0" prefWidth="268.0">
         <columns>
