--- a/src/main/resources/Ajouter.fxml
+++ b/src/main/resources/Ajouter.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Ajouter">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.Ajouter">
    <children>
       <TextField fx:id="nomTF" layoutX="29.0" layoutY="44.0" promptText="nom" />
       <TextField fx:id="descriptionTF" layoutX="29.0" layoutY="92.0" promptText="description" />
