--- a/src/main/resources/Ajouter.fxml
+++ b/src/main/resources/Ajouter.fxml
@@ -4,13 +4,15 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.Ajouter">
    <children>
-      <TextField fx:id="nomTF" layoutX="29.0" layoutY="44.0" promptText="nom" />
-      <TextField fx:id="descriptionTF" layoutX="29.0" layoutY="92.0" promptText="description" />
+      <TextField fx:id="nomTF" layoutX="29.0" layoutY="55.0" promptText="nom" />
+      <TextField fx:id="descriptionTF" layoutX="29.0" layoutY="99.0" promptText="description" />
       <TextField fx:id="musclecibleTF" layoutX="29.0" layoutY="139.0" promptText="muscle ciblé" />
-      <Button layoutX="117.0" layoutY="188.0" mnemonicParsing="false" onAction="#ajouter" text="ajouter" />
+       <TextField fx:id="urlTF" layoutX="29.0" layoutY="175.0" promptText="url" />
+
+       <Button layoutX="124.0" layoutY="215.0" mnemonicParsing="false" onAction="#ajouter" text="ajouter" />
       <Button layoutX="319.0" layoutY="80.0" mnemonicParsing="false" onAction="#navigate" text="Button" />
+
    </children>
 </AnchorPane>
