--- a/src/main/resources/AfficherEx.fxml
+++ b/src/main/resources/AfficherEx.fxml
@@ -4,14 +4,14 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.AfficherEx">
    <children>
-      <TableView fx:id="tableView" layoutX="200.0" layoutY="61.0" prefHeight="201.0" prefWidth="268.0">
+      <TableView fx:id="tableView" layoutX="25.0" layoutY="50.0" prefHeight="201.0" prefWidth="502.0">
         <columns>
           <TableColumn fx:id="nomEx" prefWidth="85.0" text="NOM" />
           <TableColumn fx:id="descriptionEx" prefWidth="100.0" text="DESCRIPTION" />
             <TableColumn fx:id="muscleEX" prefWidth="82.0" text="MUSCLE" />
+            <TableColumn fx:id="imageEx" prefWidth="75.0" text="IMAGE" />
         </columns>
       </TableView>
    </children>
