--- a/src/main/resources/deleteFood.fxml
+++ b/src/main/resources/deleteFood.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -92,7 +91,6 @@
       <GridPane layoutX="278.0" layoutY="246.0" prefHeight="326.0" prefWidth="578.0" AnchorPane.leftAnchor="278.0" AnchorPane.rightAnchor="20.399999999999977">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints maxHeight="261.3999847412109" minHeight="10.0" prefHeight="261.3999847412109" vgrow="SOMETIMES" />
@@ -101,27 +99,26 @@
             <RowConstraints maxHeight="261.3999847412109" minHeight="10.0" prefHeight="261.3999847412109" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <TextField fx:id="nameTF" prefHeight="56.0" promptText="Name" />
-            <TextField fx:id="caloriesTF" prefHeight="56.0" promptText="calories" GridPane.rowIndex="1" />
-            <TextField fx:id="proteinTF" prefHeight="56.0" promptText="protein" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="carbsTF" prefHeight="56.0" promptText="carbohydrates" GridPane.rowIndex="2" />
-            <TextField fx:id="fatTF" prefHeight="56.0" promptText="fat" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField fx:id="servsizeTF" prefHeight="56.0" promptText="Serving size" GridPane.rowIndex="3" />
-            <ComboBox fx:id="combo" onAction="#Select" prefHeight="56.0" prefWidth="287.0" styleClass="combo-box" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="idTF" prefHeight="56.0" promptText="ID" GridPane.rowIndex="1" />
+            <Button mnemonicParsing="false" onAction="#delete" prefHeight="50.0" prefWidth="130.0" styleClass="button2" stylesheets="@assets/css/fullpackstyling.css" text="Delete" textFill="WHITE" GridPane.rowIndex="2">
+               <font>
+                  <Font size="23.0" />
+               </font>
+            </Button>
+            <Label text="Enter the food id:">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
          </children>
       </GridPane>
       <Pane layoutX="250.0" layoutY="95.0" prefHeight="118.0" prefWidth="633.0" style="-fx-background-color: #7156DD;" AnchorPane.leftAnchor="250.39999999999998" AnchorPane.rightAnchor="-7.600000000000023">
          <children>
-            <Label layoutX="30.0" layoutY="34.0" text="Add New Food" textFill="WHITE">
+            <Label layoutX="30.0" layoutY="34.0" text="Delete Food" textFill="WHITE">
                <font>
                   <Font size="35.0" />
                </font>
             </Label>
          </children></Pane>
-      <Button layoutX="502.0" layoutY="572.0" mnemonicParsing="false" onAction="#inesrtFood" prefHeight="50.0" prefWidth="130.0" styleClass="button2" stylesheets="@assets/css/fullpackstyling.css" text="Add" textFill="WHITE">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Button>
    </children>
 </AnchorPane>
