--- a/src/main/resources/AfficherEx.fxml
+++ b/src/main/resources/AfficherEx.fxml
@@ -1,18 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.AfficherEx">
-   <children>
-      <TableView fx:id="tableView" layoutX="25.0" layoutY="50.0" prefHeight="201.0" prefWidth="502.0">
-        <columns>
-          <TableColumn fx:id="nomEx" prefWidth="85.0" text="NOM" />
-          <TableColumn fx:id="descriptionEx" prefWidth="100.0" text="DESCRIPTION" />
-            <TableColumn fx:id="muscleEX" prefWidth="82.0" text="MUSCLE" />
-            <TableColumn fx:id="imageEx" prefWidth="75.0" text="IMAGE" />
-        </columns>
-      </TableView>
-   </children>
+<AnchorPane prefHeight="600.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.AfficherEx">
+    <children>
+        <!-- Barre de recherche -->
+        <TextField fx:id="RechercherTF" layoutX="30.0" layoutY="20.0" prefHeight="25.0" prefWidth="300.0" promptText="Rechercher" />
+
+        <!-- Titre de la table -->
+        <Label layoutX="30.0" layoutY="60.0" prefHeight="17.0" prefWidth="150.0" text="Liste des exercices" />
+
+        <!-- Tableau des exercices -->
+        <TableView fx:id="tableView" layoutX="30.0" layoutY="90.0" prefHeight="450.0" prefWidth="1020.0">
+            <columns>
+                <TableColumn fx:id="nomEx" prefWidth="170.0" text="NOM" />
+                <TableColumn fx:id="descriptionEx" prefWidth="300.0" text="DESCRIPTION" />
+                <TableColumn fx:id="muscleEX" prefWidth="170.0" text="MUSCLE" />
+                <TableColumn fx:id="imageEx" minWidth="2.0" prefWidth="170.0" text="IMAGE" />
+            </columns>
+        </TableView>
+    </children>
 </AnchorPane>
