--- a/src/main/resources/AfficherEx.fxml
+++ b/src/main/resources/AfficherEx.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -8,32 +9,60 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 
 <AnchorPane prefHeight="600.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.AfficherEx">
    <children>
-      <Label layoutX="31.0" layoutY="30.0" prefHeight="17.0" prefWidth="109.0" text="Seach exercice" />
-      <TableView fx:id="tableView" layoutX="25.0" layoutY="104.0" prefHeight="375.0" prefWidth="800.0">
+       <VBox layoutX="42.0" layoutY="2.0" prefHeight="600.0" prefWidth="219.0" style="-fx-background-color: #3F2B63;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="861.0" AnchorPane.topAnchor="0.0">
+           <children>
+                 <ImageView fitHeight="192.0" fitWidth="189.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                         <Image url="@img/iron_core.png" />
+                     </image>
+               <VBox.margin>
+                  <Insets left="17.0" />
+               </VBox.margin>
+                 </ImageView>
+               <Pane prefHeight="100.0" prefWidth="224.0">
+                   <children>
+                  <ComboBox fx:id="muscleCibleComboBox" layoutX="48.0" layoutY="37.0" prefHeight="29.0" prefWidth="135.0">
+                     <padding>
+                        <Insets bottom="2.0" left="10.0" top="2.0" />
+                     </padding>
+                  </ComboBox>
+                   </children>
+               </Pane>
+           </children>
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="3.0" />
+         </padding>
+       </VBox>
+      <TableView fx:id="tableView" layoutX="252.0" layoutY="78.0" prefHeight="547.0" prefWidth="780.0">
         <columns>
-          <TableColumn fx:id="nomEx" prefWidth="170.0" text="NOM" />
-          <TableColumn fx:id="descriptionEx" prefWidth="170.0" text="DESCRIPTION" />
-            <TableColumn fx:id="muscleEX" prefWidth="170.0" text="MUSCLE" />
-            <TableColumn fx:id="imageEx" minWidth="2.0" prefWidth="160.0" text="IMAGE" />
-            <TableColumn fx:id="actionCol" text="Action">
+          <TableColumn fx:id="nomEx" prefWidth="130.0" text="NOM" />
+          <TableColumn fx:id="descriptionEx" prefWidth="130.0" text="DESCRIPTION" />
+            <TableColumn fx:id="muscleEX" prefWidth="130.0" text="MUSCLE" />
+            <TableColumn fx:id="imageEx" minWidth="2.0" prefWidth="130.0" text="IMAGE" />
+            <TableColumn fx:id="actionCol" prefWidth="130.0" text="Action">
                 <!-- Pas besoin de cellValueFactory pour les boutons d'action -->
             </TableColumn>
 
         </columns>
       </TableView>
-       <StackPane layoutX="140.0" layoutY="25.0" prefHeight="28.0" prefWidth="320.0">
-           <TextField fx:id="RechercherTF" styleClass="search-field" />
-           <ImageView fitHeight="35" fitWidth="35" pickOnBounds="true" preserveRatio="true" StackPane.alignment="CENTER_LEFT">
-               <image>
-                   <Image url="@/img/search_8767612.png" /> <!-- Assurez-vous que le chemin est correct -->
-               </image>
-           </ImageView>
-       </StackPane>
-      <ComboBox fx:id="muscleCibleComboBox" layoutX="483.0" layoutY="30.0" prefWidth="150.0" />
+       <StackPane layoutX="274.0" layoutY="2.0" prefHeight="59.0" prefWidth="455.0" />
+        <TextField fx:id="RechercherTF" layoutX="370.0" layoutY="30.0" prefHeight="25.0" prefWidth="310.0" styleClass="search-field">
+         <padding>
+            <Insets right="5.0" />
+         </padding>
+      </TextField>
+        <ImageView fitHeight="35.0" fitWidth="45.0" layoutX="376.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@img/search_8767612.png" /> <!-- Assurez-vous que le chemin est correct -->
+            </image>
+        </ImageView>
+      <Label layoutX="267.0" layoutY="27.0" prefHeight="33.0" prefWidth="81.0" text="Seach exercice" />
 
    </children>
 </AnchorPane>
