--- a/src/main/resources/deleteFood.fxml
+++ b/src/main/resources/deleteFood.fxml
@@ -86,6 +86,21 @@
                   <Font size="13.0" />
                </font>
             </Button>
+            <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#recipeNavigate" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@assets/css/fullpackstyling.css" text="Recipes" textFill="WHITE">
+               <graphic>
+                  <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@assets/icons/recipe.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Button>
          </children>
       </VBox>
       <GridPane layoutX="278.0" layoutY="246.0" prefHeight="326.0" prefWidth="578.0" AnchorPane.leftAnchor="278.0" AnchorPane.rightAnchor="20.399999999999977">
