--- a/src/main/resources/mainRecipe.fxml
+++ b/src/main/resources/mainRecipe.fxml
@@ -2,20 +2,22 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="635.0" prefWidth="876.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.AddFood">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="635.0" prefWidth="876.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.ViewRecipe">
    <children>
       <VBox prefHeight="642.0" prefWidth="250.0" style="-fx-background-color: #3F2B63;" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -28,7 +30,7 @@
                   </ImageView>
                </children>
             </Pane>
-            <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#addFood" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@assets/css/fullpackstyling.css" text="Add Food" textFill="WHITE">
+            <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#addRecipe" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@assets/css/fullpackstyling.css" text="Add Recipe" textFill="WHITE">
                <graphic>
                   <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -42,7 +44,7 @@
                   <Font size="13.0" />
                </font>
             </Button>
-            <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#viewFood" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@assets/css/fullpackstyling.css" text="View Food" textFill="WHITE">
+            <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#viewRecipe" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@assets/css/fullpackstyling.css" text="View Recipe" textFill="WHITE">
                <graphic>
                   <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -57,7 +59,7 @@
                   <Font size="13.0" />
                </font>
             </Button>
-            <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" layoutX="10.0" layoutY="36.0" mnemonicParsing="false" onAction="#editFood" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@assets/css/fullpackstyling.css" text="Edit Food" textFill="WHITE">
+            <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" layoutX="10.0" layoutY="36.0" mnemonicParsing="false" onAction="#editRecipe" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@assets/css/fullpackstyling.css" text="Edit Recipe" textFill="WHITE">
                <graphic>
                   <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -72,7 +74,7 @@
                   <Font size="13.0" />
                </font>
             </Button>
-            <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" layoutX="10.0" layoutY="63.0" mnemonicParsing="false" onAction="#deleteFood" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@assets/css/fullpackstyling.css" text="Delete Food" textFill="WHITE">
+            <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" layoutX="10.0" layoutY="63.0" mnemonicParsing="false" onAction="#deleteRecipe" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@assets/css/fullpackstyling.css" text="Delete Recipe" textFill="WHITE">
                <graphic>
                   <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -87,11 +89,11 @@
                   <Font size="13.0" />
                </font>
             </Button>
-            <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#recipeNavigate" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@assets/css/fullpackstyling.css" text="Recipes" textFill="WHITE">
+            <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" layoutX="10.0" layoutY="361.0" mnemonicParsing="false" onAction="#foodNavigate" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@assets/css/fullpackstyling.css" text="Food" textFill="WHITE">
                <graphic>
                   <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@assets/icons/recipe.png" />
+                        <Image url="@assets/icons/food.png" />
                      </image>
                   </ImageView>
                </graphic>
@@ -104,39 +106,50 @@
             </Button>
          </children>
       </VBox>
-      <GridPane layoutX="278.0" layoutY="246.0" prefHeight="326.0" prefWidth="578.0" AnchorPane.leftAnchor="278.0" AnchorPane.rightAnchor="20.399999999999977">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      <GridPane layoutX="278.0" layoutY="278.0" prefHeight="326.0" prefWidth="578.0" AnchorPane.leftAnchor="277.6" AnchorPane.rightAnchor="19.600000000000023">
+         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints maxHeight="261.3999847412109" minHeight="10.0" prefHeight="261.3999847412109" vgrow="SOMETIMES" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints maxHeight="145.4" minHeight="10.0" prefHeight="45.40001525878907" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="261.3999847412109" minHeight="10.0" prefHeight="261.3999847412109" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="261.3999847412109" minHeight="10.0" prefHeight="261.3999847412109" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="261.3999847412109" minHeight="10.0" prefHeight="261.3999847412109" vgrow="SOMETIMES" />
-        </rowConstraints>
+         </rowConstraints>
          <children>
-            <TextField fx:id="nameTF" prefHeight="56.0" promptText="Name" />
-            <TextField fx:id="caloriesTF" prefHeight="56.0" promptText="calories" GridPane.rowIndex="1" />
-            <TextField fx:id="proteinTF" prefHeight="56.0" promptText="protein" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="carbsTF" prefHeight="56.0" promptText="carbohydrates" GridPane.rowIndex="2" />
-            <TextField fx:id="fatTF" prefHeight="56.0" promptText="fat" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField fx:id="servsizeTF" prefHeight="56.0" promptText="Serving size" GridPane.rowIndex="3" />
-            <ComboBox fx:id="combo" onAction="#Select" prefHeight="56.0" prefWidth="287.0" styleClass="combo-box" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TableView fx:id="tableR" layoutX="278.0" layoutY="278.0" prefHeight="326.0" prefWidth="578.0" stylesheets="@assets/css/fullpackstyling.css" AnchorPane.leftAnchor="277.6" AnchorPane.rightAnchor="19.600000000000023" GridPane.rowIndex="1">
+               <columns>
+                  <TableColumn fx:id="nameR" text="Recipe Name" />
+                  <TableColumn fx:id="calR" text="Calories" />
+                  <TableColumn fx:id="protR" text="Protein" />
+                  <TableColumn fx:id="carbsR" text="Carbohydrates" />
+                  <TableColumn fx:id="fatR" text="Fat" />
+               </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+            </TableView>
+            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+               <children>
+                  <TextField prefHeight="26.0" prefWidth="438.0" />
+                  <Button graphicTextGap="10.0" mnemonicParsing="false" styleClass="button4" stylesheets="@assets/css/fullpackstyling.css" text="Search" textFill="WHITE">
+                     <graphic>
+                        <ImageView fitHeight="18.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@assets/icons/search2.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+               </children>
+            </HBox>
          </children>
       </GridPane>
       <Pane layoutX="250.0" layoutY="95.0" prefHeight="118.0" prefWidth="633.0" style="-fx-background-color: #7156DD;" AnchorPane.leftAnchor="250.39999999999998" AnchorPane.rightAnchor="-7.600000000000023">
          <children>
-            <Label layoutX="30.0" layoutY="34.0" text="Add New Food" textFill="WHITE">
+            <Label layoutX="30.0" layoutY="34.0" text="Recipes List" textFill="WHITE">
                <font>
                   <Font size="35.0" />
                </font>
             </Label>
          </children></Pane>
-      <Button layoutX="502.0" layoutY="572.0" mnemonicParsing="false" onAction="#inesrtFood" prefHeight="50.0" prefWidth="130.0" styleClass="button2" stylesheets="@assets/css/fullpackstyling.css" text="Add" textFill="WHITE">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Button>
    </children>
 </AnchorPane>
