--- a/src/main/resources/addFood.fxml
+++ b/src/main/resources/addFood.fxml
@@ -122,7 +122,7 @@
             <TextField fx:id="carbsTF" prefHeight="56.0" promptText="carbohydrates" GridPane.rowIndex="2" />
             <TextField fx:id="fatTF" prefHeight="56.0" promptText="fat" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <TextField fx:id="servsizeTF" prefHeight="56.0" promptText="Serving size" GridPane.rowIndex="3" />
-            <ComboBox fx:id="combo" onAction="#Select" prefHeight="56.0" prefWidth="287.0" styleClass="combo-box" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <ComboBox fx:id="combo" onAction="#Select" prefHeight="56.0" prefWidth="287.0" promptText="Unit" styleClass="combo-box" GridPane.columnIndex="1" GridPane.rowIndex="3" />
          </children>
       </GridPane>
       <Pane layoutX="250.0" layoutY="95.0" prefHeight="118.0" prefWidth="633.0" style="-fx-background-color: #7156DD;" AnchorPane.leftAnchor="250.39999999999998" AnchorPane.rightAnchor="-7.600000000000023">
