--- a/src/main/resources/deleteFood.fxml
+++ b/src/main/resources/deleteFood.fxml
@@ -2,8 +2,8 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -114,17 +114,17 @@
             <RowConstraints maxHeight="261.3999847412109" minHeight="10.0" prefHeight="261.3999847412109" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <TextField fx:id="idTF" prefHeight="56.0" promptText="ID" GridPane.rowIndex="1" />
             <Button mnemonicParsing="false" onAction="#delete" prefHeight="50.0" prefWidth="130.0" styleClass="button2" stylesheets="@assets/css/fullpackstyling.css" text="Delete" textFill="WHITE" GridPane.rowIndex="2">
                <font>
                   <Font size="23.0" />
                </font>
             </Button>
-            <Label text="Enter the food id:">
+            <Label text="Choose the food you want to delete:">
                <font>
                   <Font size="17.0" />
                </font>
             </Label>
+            <ComboBox fx:id="foodComboBox" prefHeight="62.0" prefWidth="309.0" stylesheets="@assets/css/fullpackstyling.css" GridPane.rowIndex="1" />
          </children>
       </GridPane>
       <Pane layoutX="250.0" layoutY="95.0" prefHeight="118.0" prefWidth="633.0" style="-fx-background-color: #7156DD;" AnchorPane.leftAnchor="250.39999999999998" AnchorPane.rightAnchor="-7.600000000000023">
