--- a/src/main/resources/editFood.fxml
+++ b/src/main/resources/editFood.fxml
@@ -122,7 +122,7 @@
             <TextField fx:id="carbsTF" prefHeight="56.0" promptText="carbohydrates" GridPane.rowIndex="2" />
             <TextField fx:id="fatTF" prefHeight="56.0" promptText="fat" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <TextField fx:id="servsizeTF" prefHeight="56.0" promptText="Serving size" GridPane.rowIndex="3" />
-            <ComboBox fx:id="combo" onAction="#Select" prefHeight="56.0" prefWidth="287.0" styleClass="combo-box" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <ComboBox fx:id="combo" onAction="#Select" prefHeight="56.0" prefWidth="287.0" promptText="Unit" styleClass="combo-box" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <TextField fx:id="idTF" prefHeight="56.0" promptText="ID" />
          </children>
       </GridPane>
