--- a/src/main/resources/afficherParticipation.fxml
+++ b/src/main/resources/afficherParticipation.fxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.afficherParticipation">
    <children>
@@ -19,5 +19,7 @@
       </HBox>
       <VBox prefHeight="400.0" prefWidth="162.0" />
       <HBox layoutX="160.0" layoutY="27.0" prefHeight="32.0" prefWidth="442.0" />
+      <Button fx:id="modifierP" layoutX="230.0" layoutY="267.0" mnemonicParsing="false" onAction="#handleModifierButtonClick2" text="modifier" />
+      <Button fx:id="supprimer" layoutX="353.0" layoutY="267.0" mnemonicParsing="false" text="supprimer" onAction="#handleSupprimerButtonClick"/>
    </children>
 </AnchorPane>
