--- a/src/main/resources/AjouterExercice.fxml
+++ b/src/main/resources/AjouterExercice.fxml
@@ -1,28 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.AjouterEx">
-
-
+<AnchorPane prefHeight="400.0" prefWidth="833.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.AjouterEx">
 
 
         <children>
-            <Label layoutX="33.0" layoutY="27.0" text="Ajouter un nouvel exercice" GridPane.columnSpan="2" />
-            <Label layoutX="32.0" layoutY="53.0" text="Nom de l'exercice :" />
-            <TextField fx:id="nameTextField" layoutX="29.0" layoutY="44.0" promptText="nom" GridPane.columnIndex="1" />
-            <Label layoutX="29.0" layoutY="79.0" text="Description de l'exercice :" GridPane.rowIndex="1" />
-            <Label layoutX="178.0" layoutY="192.0" text="Image de l'exercice :" GridPane.rowIndex="2" />
+            <VBox layoutX="42.0" layoutY="2.0" prefHeight="600.0" prefWidth="219.0" style="-fx-background-color: #3F2B63;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="861.0" AnchorPane.topAnchor="0.0">
+                <children>
+                    <ImageView fitHeight="192.0" fitWidth="189.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                            <Image url="@img/iron_core.png" />
+                        </image>
+                    </ImageView>
+                </children>
+            </VBox>
+            <Label layoutX="241.0" layoutY="14.0" prefHeight="24.0" prefWidth="147.0" text="Nom de l'exercice :" />
+            <TextField fx:id="nameTextField" layoutX="240.0" layoutY="44.0" prefHeight="35.0" prefWidth="261.0" promptText="nom" styleClass="text" GridPane.columnIndex="1">
+         <stylesheets>
+            <URL value="@style.css" />
+            <URL value="@style.css" />
+         </stylesheets></TextField>
+            <Label layoutX="236.0" layoutY="94.0" text="Description de l'exercice :" GridPane.rowIndex="1" />
+            <Label layoutX="241.0" layoutY="200.0" text="Image de l'exercice :" GridPane.rowIndex="2" />
             <ImageView fx:id="imageView" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <Button layoutX="28.0" layoutY="188.0" mnemonicParsing="false" onAction="#handleUploadImage" text="Télécharger une image" GridPane.rowIndex="3" />
-            <Button layoutX="29.0" layoutY="236.0" mnemonicParsing="false" onAction="#handleAddExercise" text="Ajouter l'exercice" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-      <TextArea fx:id="descriptionTextArea" layoutX="25.0" layoutY="104.0" prefHeight="60.0" prefWidth="158.0" />
-            <Button layoutX="319.0" layoutY="80.0" mnemonicParsing="false" onAction="#navigate" text="Button" />
+            <Button layoutX="229.0" layoutY="226.0" mnemonicParsing="false" onAction="#handleUploadImage" styleClass="buttonn" stylesheets="@style.css" text="Joindre une image" GridPane.rowIndex="3" />
+            <Button layoutX="244.0" layoutY="276.0" mnemonicParsing="false" onAction="#handleAddExercise" styleClass="buttonn" stylesheets="@style.css" text="Ajouter " GridPane.columnIndex="1" GridPane.rowIndex="3" />
+      <TextArea fx:id="descriptionTextArea" layoutX="238.0" layoutY="123.0" prefHeight="60.0" prefWidth="261.0" promptText="décrire lexercice" styleClass="text" />
+            <Button layoutX="645.0" layoutY="19.0" mnemonicParsing="false" onAction="#navigate" styleClass="buttonn" stylesheets="style.css" text="Afficher la liste" />
         </children>
 </AnchorPane>
