--- a/src/main/resources/listeCompetition.fxml
+++ b/src/main/resources/listeCompetition.fxml
@@ -1,67 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="633.0" prefWidth="733.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.listeCompetition">
    <children>
-      <BorderPane prefHeight="400.0" prefWidth="600.0">
-         <left>
-            <VBox prefHeight="489.0" prefWidth="202.0" BorderPane.alignment="CENTER">
-               <children>
-                  <HBox alignment="CENTER" prefHeight="43.0" prefWidth="178.0">
-                     <children>
-                        <Label text="Salle de sport">
-                           <font>
-                              <Font name="Cambria Bold" size="18.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </HBox>
-                  <HBox alignment="CENTER" prefHeight="56.0" prefWidth="178.0">
-                     <children>
-                        <Label text="No pain no tartine">
-                           <font>
-                              <Font name="Cambria Bold" size="22.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </HBox>
-               </children>
-            </VBox>
-         </left>
-         <center>
-            <VBox prefHeight="400.0" prefWidth="400.0" BorderPane.alignment="CENTER">
-               <children>
-                  <HBox alignment="CENTER" prefHeight="49.0" prefWidth="446.0">
-                     <children>
-                        <Label text="Liste des compétitions">
-                           <font>
-                              <Font name="System Bold" size="22.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </HBox>
-                  <HBox alignment="CENTER_LEFT" prefHeight="53.0" prefWidth="446.0">
-                     <children>
-                        <TextField alignment="TOP_LEFT" promptText="chercher par libelle">
-                           <opaqueInsets>
-                              <Insets />
-                           </opaqueInsets>
-                        </TextField>
-                     </children>
-                  </HBox>
-                  <ListView fx:id="competitionListView" prefHeight="298.0" prefWidth="433.0" />
-               </children>
-            </VBox>
-         </center>
-      </BorderPane>
+      <VBox prefHeight="634.0" prefWidth="206.0" />
+      <HBox alignment="CENTER" layoutX="206.0" prefHeight="54.0" prefWidth="526.0">
+         <children>
+            <Label text="Liste des compétitions">
+               <font>
+                  <Font name="Cambria Bold" size="22.0" />
+               </font>
+            </Label>
+         </children>
+      </HBox>
+      <HBox alignment="BOTTOM_RIGHT" layoutX="206.0" layoutY="54.0" prefHeight="27.0" prefWidth="526.0">
+         <children>
+            <Button fx:id="chercherBtn" mnemonicParsing="false" text="Rechercher"  onAction="#handleSearchButtonClicked" />
+            <TextField fx:id="chercherText" promptText="libelle" />
+         </children>
+      </HBox>
+      <ListView fx:id="competitionListView" layoutX="206.0" layoutY="94.0" prefHeight="539.0" prefWidth="526.0" />
    </children>
 </AnchorPane>
