--- a/src/main/resources/AjouterPlan.fxml
+++ b/src/main/resources/AjouterPlan.fxml
@@ -1,24 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Font?>
 
-<VBox fx:id="root" alignment="CENTER" spacing="20" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.AjouterPlan">
-    <Label text="Ajouter un Nouveau Plan d'Exercice" styleClass="heading"/>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+
+<VBox fx:id="root" alignment="CENTER" prefHeight="281.0" prefWidth="948.0" spacing="20" stylesheets="@style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.AjouterPlan">
+    <Label prefHeight="18.0" prefWidth="247.0" styleClass="heading" text="Ajouter un Nouveau Plan d'Exercice" />
     <HBox spacing="15">
         <VBox spacing="10">
-            <Label text="Nom du Plan:"/>
-            <TextField fx:id="nomPlanTextField" promptText="Entrez le nom du plan"/>
-            <Label text="Description du Plan:"/>
-            <TextArea fx:id="descriptionPlanTextArea" promptText="Entrez une description" prefHeight="100"/>
-            <Button text="Choisir Image" onAction="#handleUploadImage"/>
-            <Button fx:id="ajouterPlanButton" text="Ajouter Plan" onAction="#handleAddPlan" styleClass="primary-button"/>
+            <Label text="Nom du Plan:" />
+            <TextField fx:id="nomPlanTextField" promptText="Entrez le nom du plan" />
+            <Label text="Description du Plan:" />
+            <TextArea fx:id="descriptionPlanTextArea" prefHeight="100" promptText="Entrez une description" />
+            <Button onAction="#handleUploadImage" text="Choisir Image" />
+            <Button fx:id="ajouterPlanButton" onAction="#handleAddPlan" styleClass="primary-button" text="Ajouter Plan" />
         </VBox>
         <VBox spacing="10">
-            <Label text="Sélectionnez les Exercices:"/>
-            <ListView fx:id="exercicesListView" prefHeight="200" prefWidth="200"/>
+            <Label text="Sélectionnez les Exercices:" />
+            <ListView fx:id="exercicesListView" prefHeight="186.0" prefWidth="402.0" />
         </VBox>
-        <ImageView fx:id="imageView" fitHeight="200" fitWidth="200" preserveRatio="true"/>
+        <ImageView fx:id="imageView" fitHeight="200" fitWidth="200" preserveRatio="true" />
     </HBox>
 </VBox>
