like section added

--- a/src/main/resources/AfficherPlan.fxml
+++ b/src/main/resources/AfficherPlan.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -27,11 +28,12 @@
                 </ImageView>
                 <Pane prefHeight="100.0" prefWidth="224.0">
                     <children>
-                        <ComboBox fx:id="muscleCibleComboBox" layoutX="48.0" layoutY="37.0" prefHeight="29.0" prefWidth="135.0">
+                        <ComboBox fx:id="nomComboBox" layoutX="48.0" layoutY="37.0" prefHeight="29.0" prefWidth="135.0"  >
                             <padding>
                                 <Insets bottom="2.0" left="10.0" top="2.0" />
                             </padding>
                         </ComboBox>
+                    <Button fx:id="btnAfficherRecommandations" layoutX="29.0" layoutY="87.0" onAction="#onBtnAfficherRecommandationsClick" text="Afficher Recommandations" />
                     </children>
                 </Pane>
             </children>
@@ -39,13 +41,14 @@
                 <Insets bottom="5.0" left="5.0" right="3.0" />
             </padding>
         </VBox>
-        <TableView fx:id="tableView" layoutX="252.0" layoutY="78.0" prefHeight="547.0" prefWidth="703.0">
+        <TableView fx:id="tableView" layoutX="252.0" layoutY="78.0" prefHeight="547.0" prefWidth="656.0">
             <columns>
+                <TableColumn fx:id="likesPlan" prefWidth="80" text="Likes" />
                 <TableColumn fx:id="nomPlan" prefWidth="130.0" text="NOM" />
                 <TableColumn fx:id="descriptionPlan" prefWidth="130.0" text="DESCRIPTION" />
-                <TableColumn fx:id="musclePlan" prefWidth="130.0" text="MUSCLE" />
                 <TableColumn fx:id="imagePlan" minWidth="2.0" prefWidth="130.0" text="IMAGE" />
-                <TableColumn fx:id="actionCol" prefWidth="145.0" text="Action">
+                <TableColumn fx:id="actionCol" minWidth="50.0" prefWidth="180.0" text="Action">
+
                     <!-- Pas besoin de cellValueFactory pour les boutons d'action -->
                 </TableColumn>
 
@@ -65,4 +68,5 @@
         <Label layoutX="267.0" layoutY="27.0" prefHeight="33.0" prefWidth="81.0" text="Seach exercice" />
 
     </children>
+
 </AnchorPane>
