--- a/src/main/resources/modifierCompetition.fxml
+++ b/src/main/resources/modifierCompetition.fxml
@@ -4,33 +4,41 @@
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="609.0" prefWidth="845.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.modifierCompetition">
+<AnchorPane prefHeight="633.0" prefWidth="799.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.modifierCompetition">
    <children>
-      <VBox layoutX="1.0" layoutY="-1.0" prefHeight="610.0" prefWidth="261.0" />
-      <HBox alignment="CENTER" layoutX="259.0" prefHeight="46.0" prefWidth="586.0">
+      <VBox alignment="TOP_CENTER" layoutX="-1.0" layoutY="-1.0" prefHeight="641.0" prefWidth="268.0" style="-fx-background-color: #4d3479;">
          <children>
-            <Label text="Modifier compétition">
+            <ImageView fitHeight="142.0" fitWidth="170.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../java/tn/esprit/images/iron_core.png" />
+               </image>
+            </ImageView>
+         </children></VBox>
+      <HBox alignment="CENTER" layoutX="266.0" prefHeight="105.0" prefWidth="579.0" style="-fx-background-color: #684fe7;">
+         <children>
+            <Label text="Modifier compétition" textFill="WHITE">
                <font>
-                  <Font name="Cambria" size="24.0" />
+                  <Font name="Cambria Bold" size="24.0" />
                </font>
             </Label>
          </children>
       </HBox>
-      <HBox layoutX="259.0" layoutY="46.0" prefHeight="46.0" prefWidth="586.0" />
       <TextField fx:id="libelle" layoutX="443.0" layoutY="138.0" />
       <TextField fx:id="nbr" layoutX="475.0" layoutY="303.0" prefHeight="26.0" prefWidth="86.0" />
       <DatePicker fx:id="dateDebut" layoutX="431.0" layoutY="191.0" />
       <DatePicker fx:id="dateFin" layoutX="431.0" layoutY="255.0" />
-      <Button fx:id="modifierC" layoutX="492.0" layoutY="412.0" mnemonicParsing="false"  onAction="#handleModifierButtonClick" text="Modifier" />
+      <Button fx:id="modifierC" layoutX="492.0" layoutY="412.0" mnemonicParsing="false" onAction="#handleModifierButtonClick" text="Modifier" />
       <Label layoutX="342.0" layoutY="142.0" text="libellé" />
       <Label layoutX="342.0" layoutY="195.0" text="date de début" />
       <Label layoutX="342.0" layoutY="259.0" text="Date de fin" />
-      <Label layoutX="344.0" layoutY="308.0" text="nombre max membres" />
+      <Label layoutX="344.0" layoutY="308.0" text="Tarif" />
+      <Button fx:id="annuler" layoutX="580.0" layoutY="412.0" mnemonicParsing="false" text="Annuler" />
    </children>
 </AnchorPane>
