--- a/src/main/resources/afficherCompetition.fxml
+++ b/src/main/resources/afficherCompetition.fxml
@@ -3,17 +3,28 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.afficherCompetition">
+<AnchorPane prefHeight="633.0" prefWidth="799.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.afficherCompetition">
    <children>
-      <Label fx:id="libelleLabel" layoutX="211.0" layoutY="105.0" text="Label" />
-      <Label fx:id="dateDebutLabel" layoutX="214.0" layoutY="140.0" text="Label" />
-      <Label fx:id="dateFinLabel" layoutX="214.0" layoutY="173.0" text="Label" />
-      <Label fx:id="tarifLabel" layoutX="214.0" layoutY="210.0" text="Label" />
-      <Button fx:id="supprimer" layoutX="339.0" layoutY="320.0" mnemonicParsing="false" onAction="#handleSupprimerButtonClick" text="Supprimer" />
-      <Button fx:id="modifierC" layoutX="253.0" layoutY="320.0" mnemonicParsing="false" onAction="#handleModifierButtonClick" text="modifier" />
-      <Button fx:id="retour" layoutX="176.0" layoutY="320.0" mnemonicParsing="false"  text="retour" />
-      <VBox prefHeight="400.0" prefWidth="173.0" />
+      <Label fx:id="libelleLabel" layoutX="325.0" layoutY="149.0" text="Label" />
+      <Label fx:id="dateDebutLabel" layoutX="325.0" layoutY="191.0" text="Label" />
+      <Label fx:id="dateFinLabel" layoutX="325.0" layoutY="234.0" text="Label" />
+      <Label fx:id="tarifLabel" layoutX="325.0" layoutY="273.0" text="Label" />
+      <Button fx:id="supprimer" layoutX="576.0" layoutY="387.0" mnemonicParsing="false" onAction="#handleSupprimerButtonClick" text="Supprimer" />
+      <Button fx:id="modifierC" layoutX="469.0" layoutY="387.0" mnemonicParsing="false" onAction="#handleModifierButtonClick" text="modifier" />
+      <Button fx:id="retour" layoutX="359.0" layoutY="387.0" mnemonicParsing="false" onAction="#handleRetourButtonClick" text="retour" />
+      <VBox prefHeight="634.0" prefWidth="256.0" style="-fx-background-color: #4d3479;" />
+      <HBox alignment="CENTER" layoutX="255.0" prefHeight="96.0" prefWidth="546.0" style="-fx-background-color: #684fe7;">
+         <children>
+            <Label text="Afficher compétition" textFill="WHITE">
+               <font>
+                  <Font name="Cambria Bold" size="24.0" />
+               </font>
+            </Label>
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
