--- a/src/main/resources/afficherParticipation.fxml
+++ b/src/main/resources/afficherParticipation.fxml
@@ -2,24 +2,37 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.afficherParticipation">
+<AnchorPane prefHeight="633.0" prefWidth="799.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.afficherParticipation">
    <children>
-      <Label fx:id="codeP" layoutX="228.0" layoutY="68.0" text="Label" />
-      <Label fx:id="codeU" layoutX="228.0" layoutY="100.0" text="Label" />
-      <Label fx:id="codeC" layoutX="228.0" layoutY="138.0" text="Label" />
-      <Label fx:id="desc" layoutX="228.0" layoutY="182.0" text="Label" />
-      <HBox layoutX="158.0" prefHeight="32.0" prefWidth="442.0">
+      <Label fx:id="codeP" layoutX="367.0" layoutY="218.0" text="Label" />
+      <Label fx:id="codeU" layoutX="365.0" layoutY="274.0" text="Label" />
+      <Label fx:id="codeC" layoutX="365.0" layoutY="312.0" text="Label" />
+      <VBox alignment="TOP_CENTER" layoutX="-4.0" prefHeight="642.0" prefWidth="265.0" style="-fx-background-color: #4d3479;">
          <children>
-            <Label />
-         </children>
-      </HBox>
-      <VBox prefHeight="400.0" prefWidth="162.0" />
-      <HBox layoutX="160.0" layoutY="27.0" prefHeight="32.0" prefWidth="442.0" />
-      <Button fx:id="modifierP" layoutX="230.0" layoutY="267.0" mnemonicParsing="false" onAction="#handleModifierButtonClick2" text="modifier" />
-      <Button fx:id="supprimer" layoutX="353.0" layoutY="267.0" mnemonicParsing="false" text="supprimer" onAction="#handleSupprimerButtonClick"/>
+            <ImageView fitHeight="162.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../java/tn/esprit/images/iron_core.png" />
+               </image>
+            </ImageView>
+         </children></VBox>
+      <HBox alignment="CENTER" layoutX="261.0" prefHeight="101.0" prefWidth="539.0" style="-fx-background-color: #684fe7;">
+         <children>
+            <Label prefHeight="27.0" prefWidth="268.0" text="Afficher participation" textFill="WHITE">
+               <font>
+                  <Font name="Cambria Bold" size="22.0" />
+               </font>
+            </Label>
+         </children></HBox>
+      <Button fx:id="modifierP" layoutX="432.0" layoutY="461.0" mnemonicParsing="false" onAction="#handleModifierButtonClick2" text="modifier" />
+      <Button fx:id="supprimer" layoutX="521.0" layoutY="461.0" mnemonicParsing="false" onAction="#handleSupprimerButtonClick" text="supprimer" />
+      <Button fx:id="retour" layoutX="355.0" layoutY="461.0" mnemonicParsing="false" onAction="#handleRetourButtonClick" text="retour" />
+      <Label fx:id="desc" layoutX="353.0" layoutY="369.0" text="Label" />
    </children>
 </AnchorPane>
