--- a/src/main/resources/ajouterCompetition.fxml
+++ b/src/main/resources/ajouterCompetition.fxml
@@ -7,39 +7,34 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="800.0" style="-fx-background-color: #b9e1d7;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.ajouterCompetition">
+<AnchorPane prefHeight="633.0" prefWidth="799.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.ajouterCompetition">
    <children>
-      <TextField fx:id="libelle" layoutX="276.0" layoutY="78.0" prefHeight="26.0" prefWidth="150.0" promptText="libelle" />
-      <TextField fx:id="tarifTxt" layoutX="277.0" layoutY="190.0" prefHeight="26.0" prefWidth="134.0" promptText="tarif en dinnars" />
-      <Label layoutX="272.0" layoutY="21.0" prefHeight="35.0" prefWidth="216.0" text="Ajouter compétition" textFill="#181818">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
-      <VBox prefHeight="492.0" prefWidth="210.0">
+      <TextField fx:id="libelle" layoutX="365.0" layoutY="244.0" prefHeight="26.0" prefWidth="134.0" promptText="libelle" />
+      <TextField fx:id="tarifTxt" layoutX="365.0" layoutY="383.0" prefHeight="26.0" prefWidth="134.0" promptText="tarif en dinnars" />
+      <Button layoutX="404.0" layoutY="434.0" mnemonicParsing="false" onAction="#ajouterCompetition" text="Ajouter" />
+      <DatePicker fx:id="dateDebut" layoutX="365.0" layoutY="291.0" prefHeight="26.0" prefWidth="134.0" promptText="date de début" />
+      <DatePicker fx:id="dateFin" layoutX="365.0" layoutY="342.0" prefHeight="26.0" prefWidth="134.0" promptText="date de fin" />
+      <VBox alignment="TOP_CENTER" layoutX="-4.0" prefHeight="642.0" prefWidth="265.0" style="-fx-background-color: #4d3479;">
          <children>
-            <ImageView fitHeight="160.0" fitWidth="200.0">
+            <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../../../cmp3.jfif" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="168.0" fitWidth="200.0">
-               <image>
-                  <Image url="@../../../../../cmp1.jfif" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="169.0" fitWidth="200.0">
-               <image>
-                  <Image url="@../../../../../cmp2.jfif" />
+                  <Image url="@../java/tn/esprit/images/iron_core.png" />
                </image>
             </ImageView>
          </children>
       </VBox>
-      <Button layoutX="288.0" layoutY="272.0" mnemonicParsing="false" onAction="#ajouterCompetition" text="Ajouter" />
-      <DatePicker fx:id="dateDebut" layoutX="277.0" layoutY="115.0" promptText="date de début" />
-      <DatePicker fx:id="dateFin" layoutX="277.0" layoutY="152.0" promptText="date de fin" />
+      <HBox alignment="CENTER" layoutX="261.0" prefHeight="100.0" prefWidth="549.0" style="-fx-background-color: #684fe7;">
+         <children>
+            <Label prefHeight="35.0" prefWidth="245.0" text="   Ajouter compétition" textFill="WHITE">
+               <font>
+                  <Font name="Cambria Bold" size="24.0" />
+               </font>
+            </Label>
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
