--- a/src/main/resources/ajouterParticipation.fxml
+++ b/src/main/resources/ajouterParticipation.fxml
@@ -4,48 +4,37 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="519.0" prefWidth="823.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.ajouterParticipation">
+<AnchorPane prefHeight="633.0" prefWidth="799.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.ajouterParticipation">
    <children>
-      <VBox layoutY="1.0" prefHeight="519.0" prefWidth="202.0">
+      <VBox alignment="TOP_CENTER" prefHeight="642.0" prefWidth="265.0" style="-fx-background-color: #4d3479;">
          <children>
-            <HBox alignment="CENTER" prefHeight="42.0" prefWidth="180.0">
-               <children>
-                  <Label text="Salle de sport">
-                     <font>
-                        <Font name="Cambria Bold" size="22.0" />
-                     </font>
-                  </Label>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" prefHeight="42.0" prefWidth="191.0">
-               <children>
-                  <Label text="No pain no tartine">
-                     <font>
-                        <Font name="Cambria Bold" size="22.0" />
-                     </font>
-                  </Label>
-               </children>
-            </HBox>
+            <ImageView fitHeight="162.0" fitWidth="141.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../java/tn/esprit/images/iron_core.png" />
+               </image>
+            </ImageView>
          </children>
       </VBox>
-      <HBox alignment="CENTER" layoutX="180.0" layoutY="1.0" prefHeight="40.0" prefWidth="420.0">
+      <HBox alignment="CENTER" layoutX="265.0" layoutY="-1.0" prefHeight="106.0" prefWidth="559.0" style="-fx-background-color: #684fe7;">
          <children>
-            <Label text="Ajouter participation">
+            <Label text="   Ajouter participation" textFill="WHITE">
                <font>
                   <Font name="Cambria Bold" size="24.0" />
                </font>
             </Label>
          </children>
       </HBox>
-      <HBox layoutX="180.0" layoutY="41.0" prefHeight="32.0" prefWidth="420.0" />
-      <ComboBox fx:id="listUtilisateur" layoutX="295.0" layoutY="108.0" prefHeight="42.0" prefWidth="166.0" promptText="participant" />
-      <ComboBox fx:id="listCompetition" layoutX="295.0" layoutY="220.0" prefHeight="40.0" prefWidth="165.0" promptText="competition" />
-      <Button layoutX="313.0" layoutY="343.0" mnemonicParsing="false" onAction="#ajouterParticipation" text="Ajouter" />
-      <TextArea fx:id="description" layoutX="525.0" layoutY="108.0" prefHeight="126.0" prefWidth="200.0" promptText="Description" />
+      <HBox alignment="CENTER" layoutX="261.0" layoutY="41.0" prefHeight="32.0" prefWidth="247.0" />
+      <ComboBox fx:id="listUtilisateur" layoutX="329.0" layoutY="284.0" prefHeight="30.0" prefWidth="166.0" promptText="participant" />
+      <ComboBox fx:id="listCompetition" layoutX="329.0" layoutY="345.0" prefHeight="30.0" prefWidth="166.0" promptText="competition" />
+      <Button layoutX="487.0" layoutY="455.0" mnemonicParsing="false" onAction="#ajouterParticipation" prefHeight="0.0" prefWidth="55.0" text="Ajouter" />
+      <TextArea fx:id="description" layoutX="600.0" layoutY="278.0" prefHeight="98.0" prefWidth="183.0" promptText="Description" />
    </children>
 </AnchorPane>
