--- a/src/main/resources/listeParticipation.fxml
+++ b/src/main/resources/listeParticipation.fxml
@@ -1,27 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.listeParticipation">
-   <center>
-      <ListView fx:id="participationListView" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
-   </center>
-   <top>
-      <SplitPane dividerPositions="0.5, 0.5" orientation="VERTICAL" prefHeight="116.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-         <items>
-            <Label prefHeight="18.0" prefWidth="145.0" text="Liste des participations" />
-            <Label prefHeight="18.0" prefWidth="94.0" text="chercher">
-               <opaqueInsets>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </opaqueInsets>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="633.0" prefWidth="799.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.listeParticipation">
+   <children>
+      <VBox alignment="TOP_CENTER" layoutY="-2.0" prefHeight="642.0" prefWidth="268.0" style="-fx-background-color: #4d3479;">
+         <children>
+            <ImageView fitHeight="161.0" fitWidth="171.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../java/tn/esprit/images/iron_core.png" />
+               </image>
+            </ImageView>
+            <Label fx:id="lienC" onMouseClicked="#handleCompetitionLabelClick" text="Competition" textFill="WHITE">
+               <font>
+                  <Font size="18.0" />
+               </font>
             </Label>
-            <TextField />
-         </items>
-      </SplitPane>
-   </top>
-</BorderPane>
+         </children></VBox>
+      <HBox alignment="CENTER" layoutX="267.0" prefHeight="102.0" prefWidth="534.0" style="-fx-background-color: #684fe7;">
+         <children>
+            <Label text="Liste Participations" textFill="WHITE">
+               <font>
+                  <Font name="Cambria Bold" size="22.0" />
+               </font></Label>
+         </children>
+      </HBox>
+      <ListView fx:id="participationListView" layoutX="267.0" layoutY="116.0" prefHeight="519.0" prefWidth="534.0" />
+   </children>
+</AnchorPane>
