--- a/src/main/resources/modifierParticipation.fxml
+++ b/src/main/resources/modifierParticipation.fxml
@@ -2,14 +2,38 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.modifierParticipation">
+<AnchorPane prefHeight="633.0" prefWidth="799.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.modifierParticipation">
    <children>
-      <ComboBox fx:id="listUtilisateur" layoutX="136.0" layoutY="111.0" prefWidth="150.0" />
-      <ComboBox fx:id="listCompetition" layoutX="136.0" layoutY="174.0" prefWidth="150.0" />
-      <TextArea fx:id="Description" layoutX="379.0" layoutY="32.0" prefHeight="184.0" prefWidth="183.0" />
-      <Button fx:id="modifierP" layoutX="235.0" layoutY="293.0" mnemonicParsing="false" onAction="#handleModifierButtonClick" text="modifier" />
+      <ComboBox fx:id="listUtilisateur" layoutX="334.0" layoutY="216.0" prefWidth="150.0" />
+      <ComboBox fx:id="listCompetition" layoutX="334.0" layoutY="277.0" prefWidth="150.0" />
+      <TextArea fx:id="Description" layoutX="559.0" layoutY="174.0" prefHeight="184.0" prefWidth="183.0" />
+      <Button fx:id="modifierP" layoutX="439.0" layoutY="397.0" mnemonicParsing="false" onAction="#handleModifierButtonClick" text="modifier" />
+      <VBox alignment="TOP_CENTER" prefHeight="634.0" prefWidth="260.0" style="-fx-background-color: #4d3479;">
+         <children>
+            <ImageView fitHeight="150.0" fitWidth="181.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../java/tn/esprit/images/iron_core.png" />
+               </image>
+            </ImageView>
+         </children>
+      </VBox>
+      <HBox alignment="CENTER" layoutX="259.0" prefHeight="100.0" prefWidth="542.0" style="-fx-background-color: #684fe7;">
+         <children>
+            <Label text="Modifier participation" textFill="WHITE">
+               <font>
+                  <Font name="Cambria Bold" size="22.0" />
+               </font>
+            </Label>
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
